--- a/setup.cfg
+++ b/setup.cfg
@@ -18,12 +18,12 @@ skip = manage.py, migrations, .tox
 known_standard_library = mock
 known_django = django
 known_cms = cms, menus
-known_first_party = djangocms_navigation
+known_first_party = djangocms_references
 sections = FUTURE, STDLIB, DJANGO, CMS, THIRDPARTY, FIRSTPARTY, LIB, LOCALFOLDER
 
 [coverage:run]
 branch = True
-source = djangocms_navigation
+source = djangocms_references
 omit =
     *apps.py,
     *constants.py,
