--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -4,4 +4,9 @@ coverage
 flake8
 isort
 factory-boy
-https://www.github.com/divio/djangocms-versioning/archive/master.zip
+
+# Unreleased django-cms 4.0 compatible packages
+# FIXME: Unreleased 3.2 changes - https://github.com/django-cms/django-cms/tarball/release/4.0.x#egg=django-cms
+https://github.com/Aiky30/django-cms/archive/feature/cms-4-django-32-support.zip
+# FIXME: Unreleased 3.2 changes - https://github.com/django-cms/djangocms-versioning/tarball/master#egg=djangocms-versioning
+https://github.com/Aiky30/djangocms-versioning/tarball/feature/django-32-compat#egg=djangocms-versioning
