--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include LICENSE.txt
 include README.rst
 recursive-include djangocms_references/templates *
+recursive-include djangocms_references/static *
 recursive-exclude * *.pyc
