fix: fix tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist =
     flake8
     isort
-    py{38,39,310}-dj{32,42}-sqlite-cms40
+    py{38,39,310}-dj{32,42}-sqlite-cms{40,41}
 
 skip_missing_interpreters=True
 
